# AI-Model

./: .gitignore  README  README.md  ai.cpp  backuptest  setup.sh
.github/workflows/: backup.yml
AST2600_BMC/: .gitignore  .vscode-ctags  CMakeListlocal.txt  CMakeLists.txt  Ibmc-test.sh  LLV  Makefile_allbin_mtdtest  README.md  bmc_build.sh  build_option.sh  doxygenbuild.sh  rmcp.cpp  scpfile.sh  sellistsave.txt  sellistsave.txttxt  testtxt.text
AST2600_BMC/Ibmc_check/: CMakeLists.txt  Ibmc-Check  Ibmccheck.cpp
AST2600_BMC/KETI-Ibmc/: .khandler.cpp.swp  CMakeLists.txt  ethernetinterface.cpp  eventservice.cpp  handler.cpp  handler.hpp  init.cpp  keti-Ibmc.cpp  khandler.cpp  khandler.hpp  logservice.cpp  msg_session.cpp  ntp.cpp  rmcp.cpp
AST2600_BMC/KETI-WDT/: CMakeLists.txt  KETI-WDT.cpp  WDT_stdx.cpp  WDT_stdx.hpp  ipmiwatchdog.conf  watchdog.cpp  watchdog.hpp  wdt_build.sh
AST2600_BMC/KETI-WDT/include/: KETI-FILE.hpp  KETI-WDT.hpp  WDT_stdx.hpp
AST2600_BMC/KETI-WDT/source/: CMakeLists.txt  KETI-FILE.cpp  KETI-WDT.cpp  WDT_stdx.cpp  main.cpp
AST2600_BMC/KETI-d/: CMakeLists.txt  common.hpp  keti_dbus.cpp  keti_dbus.hpp  keti_dbus.xml  keti_dbus_adaptor.h
AST2600_BMC/KETI-d/include/: common.hpp  keti_dbus.hpp  keti_dbus.xml  keti_dbus_adaptor.h
AST2600_BMC/KETI-d/src/: CMakeLists.txt  keti_dbus  keti_dbus.cpp  smbus.cpp
AST2600_BMC/KETI_TOOL/: tool_build.sh
AST2600_BMC/KETI_TOOL/kcs_bt_test/: CMakeLists.txt  kcs_bt_test.c
AST2600_BMC/KETI_TOOL/kcs_test/: CMakeLists.txt  kcs.c
AST2600_BMC/KETI_TOOL/mctp/: CMakeLists.txt  libmctp.c  libmctp.h  list.h  mctp.c
AST2600_BMC/KETI_TOOL/mem_utils/: CMakeLists.txt  md  md.c  mem_common.c  mem_common.h  mw  mw.c  spd  spd.c  spw  spw.c
AST2600_BMC/KETI_TOOL/oob/: CMakeLists.txt  KETI-oob  oob-test.c
AST2600_BMC/KETI_TOOL/peci/: CMakeLists.txt  KETI-PECI  peci.c
AST2600_BMC/KETI_TOOL/usb/: KETI-USB  usb.c
AST2600_BMC/KETI_TOOL/usbbk/: CMakeLists.txt  KETI-USB  usb.c
AST2600_BMC/KETI_TOOL/video/: CMakeLists.txt  KETI-KVM  kmrecv.h  kvm.c  kvm.h  main.cpp  main1.cpp  video.inf  vsend.c  vsend.h
AST2600_BMC/KETI_TOOL/video_bk/: CMakeLists.txt  KETI-KVM  ast-video.c  kmrecv.c  kvmrecv.c  kvmrecv.h  video.c  video.h  vsend.c  vsend.h
AST2600_BMC/KETI_TOOL/videonot/: CMakeLists.txt  KETI-KVM  ast-video.c  regs-video.h
AST2600_BMC/KETI_TOOL/xdma/: CMakeLists.txt  KETI-XMDA  xdma.c
AST2600_BMC/include/ipmi/: apps.hpp  chassis.hpp  common.hpp  efte.hpp  event_string.hpp  fru.hpp  gpio.hpp  ipmi.hpp  lightning_sensor.hpp  network.hpp  pef_policy.hpp  rest_delete.hpp  rest_get.hpp  rest_post.hpp  rest_put.hpp  sdr.hpp  sensor_define.hpp  setting_service.hpp  sol.hpp  user.hpp
AST2600_BMC/include/redfish/: eventservice.hpp  logservice.hpp  msg_session.hpp  ntp.hpp  resource.hpp  rmcp.hpp
AST2600_BMC/include/util/: Sensor_Proxy.h  dbus_system.hpp  iniparser.hpp  peci-ioctl.h  peci.hpp
AST2600_BMC/ipmbtest/: CMakeLists.txt  compile.sh  ipmb-test  ipmb.h  ipmbtest.c  root@10.0.6.109
AST2600_BMC/kvm/: .ast-video.c.swp  CMakeLists.txt  KETI-KVM  ast-video.c  root@10.0.6.104  video.c  video.h
AST2600_BMC/libs/: CMakeLists.txt
AST2600_BMC/libs/apps/: apps.cpp
AST2600_BMC/libs/chassis/: chassis.cpp
AST2600_BMC/libs/fru/: fru.cpp
AST2600_BMC/libs/ipmb/: ipmb.cpp
AST2600_BMC/libs/ipmi/: ipmi.cpp
AST2600_BMC/libs/lightning/: lightning_sensor.cpp
AST2600_BMC/libs/network/: network.cpp
AST2600_BMC/libs/redfish/: record.cpp  resource.cpp  util.cpp
AST2600_BMC/libs/sdr/: sdr.cpp  sensor_define.cpp
AST2600_BMC/libs/sel/: efte.cpp  pef_policy.cpp  sel.cpp
AST2600_BMC/libs/sol/: sol.cpp
AST2600_BMC/libs/user/: user.cpp
AST2600_BMC/libs/util/: dbus_system.cpp
AST2600_BMC/libs/web/: rest_delete.cpp  rest_get.cpp  rest_post.cpp  rest_put.cpp
AST2600_BMC/video_old/: CMakeLists.txt  kicheolNAS.sh  kmrecv.c  kvm.c  regs-video.h  video.c  video.h  video.inf  vsend.c  vsend.h
modules/lib/tensorflow/tensorflow/lite/micro/: micro_utils.h
modules/lib/tensorflow/zephyr/: module.yml
zephyr/: build.sh
zephyr/include/: features.h  stdc-predef.h
zephyr/include/drivers/: reset_control.h
zephyr/include/gnu/: stubs-32.h  stubs.h
zephyr/include/sys/: features.h  ipc.h
zephyr/samples/modules/tensorflow/hello_world/src/: main.c
zephyr/samples/modules/tensorflow/magic_wand/: README.rst
zephyrproject/: zephyr
